correction sofware et production xml

--- a/languages/fr.json
+++ b/languages/fr.json
@@ -13,13 +13,16 @@
     "NEED_LABEL": "Dépendance logiciel",
     "FEATURE_LABEL": "Fonctionnalité",
     "DEPENDENCY_LABEL": "Dépendance",
+    "NAMEGENERATOR_LABEL": "Générateur de nom",
 
     "SOFT_NAME_TRAD": "Nom",
+    "SOFT_OVERRIDE_TRAD": "Remplacer",
     "SOFT_TYPE_TRAD": "Type",
     "SOFT_CATEGORY_TRAD": "Catégories",
     "SOFT_DESCRIPTION_TRAD": "Description",
     "SOFT_RANDOM_TRAD": "Variation",
     "SOFT_OSSPECIFIC_TRAD": "Dépend de le l'OS",
+    "SOFT_DELETE_TRAD": "Supprimer le logiciel",
     "SOFT_ONECLIENT_TRAD": "Logiciel pour contrat",
     "SOFT_INHOUSE_TRAD": "Conserver dans l'entreprise",
     "SOFT_NEEDS_TRAD": "Dépendances logiciel",
@@ -39,8 +42,10 @@
     "CATEG_UNLOCK_TRAD": "Date d'apparition",
     
     "FEAT_FORCED_TRAD": "Forcé",
+    "FEAT_VITAL_TRAD": "Vital",
     "FEAT_FROM_TRAD": "Fils de",
     "FEAT_NAME_TRAD": "Nom",
+    "FEAT_CATEGORY_TRAD": "Compétence",
     "FEAT_DESCRIPTION_TRAD": "Description",
     "FEAT_DEVTIME_TRAD": "Temps de développement",
     "FEAT_INNOVATION_TRAD": "Innovation",
