--- a/languages/fr.json
+++ b/languages/fr.json
@@ -74,7 +74,8 @@
     "BTN_ADD_NEED": "Ajouter une dépendance",
     "BTN_ADD_FEATURE": "Ajouter une fonctionnalité",
     "BTN_ADD_DEPENDENCY": "Ajouter une dépendance",
-    "BTN_VALID": "Valider"
+    "BTN_VALID": "Valider",
+    "BTN_DELETE": "Supprimer"
 
 
 }
